// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements WebSocketChannelBindingElement given query and header fields of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(WebSocketChannelBindingElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements WebSocketChannelBindingElement should refract to semantic ApiDOM tree 1`] = `
(WebSocketChannelBindingElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
